<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/antenna_register_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/poweredby_bg"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/register_label"
                style="@style/DashboardHeader"
                android:text="@string/reg_unreg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/mac_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:gravity="center"
                    android:text="@string/lt_sumac"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    app:fontFamily="@font/calibril" />

                <TextView
                    android:id="@+id/Link_SuMac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    app:fontFamily="@font/calibril" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:gravity="center"
                    android:text="@string/lt_direction"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    app:fontFamily="@font/calibril" />

                <Spinner
                    android:id="@+id/Link_Direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:entries="@array/lt_bsu_dir_opts"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    app:fontFamily="@font/calibrili" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:gravity="center"
                    android:text="@string/lt_duration"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    app:fontFamily="@font/calibril" />

                <Spinner
                    android:id="@+id/Link_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:entries="@array/lt_duration_opts"
                    android:textColor="@color/text_color"
                    android:textSize="15sp"
                    app:fontFamily="@font/calibril" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_view_color" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/Link_Startbutton"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/custom_button"
                    android:onClick="startTest"
                    android:text="@string/lt_start"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/calibril" />

                <Button
                    android:id="@+id/Link_stopbutton"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_alignStart="@+id/Link_Startbutton"
                    android:layout_centerVertical="true"
                    android:background="@drawable/custom_button"
                    android:onClick="stopTest"
                    android:text="@string/lt_stop"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:fontFamily="@font/calibril" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_view_color" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_local"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_remote"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_view_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_sig_a1"
                        android:textAlignment="textEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/localA1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_sig_local_a1val"
                        android:textAlignment="center"
                        android:textColor="@color/local_line_graph_color" />

                    <TextView
                        android:id="@+id/remoteA1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_sig_remote_a1val"
                        android:textAlignment="center"
                        android:textColor="@color/remote_line_graph_color" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_view_color" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_sig_a2"
                        android:textAlignment="textEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/localA2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_sig_local_a2val"
                        android:textAlignment="center"
                        android:textColor="@color/local_line_graph_color" />

                    <TextView
                        android:id="@+id/remoteA2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_sig_remote_a2val"
                        android:textAlignment="center"
                        android:textColor="@color/remote_line_graph_color" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_view_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_qual"
                        android:textAlignment="textEnd"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/localLinkQuality"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_local_qual"
                        android:textAlignment="center"
                        android:textColor="@color/local_line_graph_color" />

                    <TextView
                        android:id="@+id/remoteLinkQuality"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lt_remote_qual"
                        android:textAlignment="center"
                        android:textColor="@color/remote_line_graph_color" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_view_color" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/area_graph"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>